# NYgrid_ampl

./: .gitignore  Presentation1.pptx  Results.xlsx  main.py  power_curves.csv  pyproject.toml
AMPL/: proj.run  proj_loadshed.mod
AMPL/2018/: DCOPF.mod  model_test.run  transport.mod
AMPL/load_shred/: DCOPF.mod  model_test.run  run_output_files.run  run_output_files_old.run  transport.mod
AMPL/ps6/: ps6.mod  ps6.run
AMPL/simulations/: run_output_files.run  transport.mod
AMPL/simulations/_general_model/: _model.mod  _runner.run
workflow/: 01_load_share_by_zone.ipynb  02_general_model_analysis.ipynb
